force-app/main/default/objects/sked__Resource_Job_Offer__c/sked__Resource_Job_Offer__c.object-meta.xml
<CustomObject>
    <description>An offer made to a single resource for a job or subset of a job</description>
    <label>Resource Job Offer</label>
    <nameField>
        <displayFormat>RJO-{00000}</displayFormat>
        <label>Resource Job Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Job Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>