force-app/main/default/objects/sked__Resource_Job_Offer__c/fields/sked__Job_Offer__c.field-meta.xml
<CustomField>
    <fullName>sked__Job_Offer__c</fullName>
    <description>The parent job offer</description>
    <label>Job Offer</label>
    <referenceTo>sked__Job_Offer__c</referenceTo>
    <relationshipLabel>Resource Job Offers</relationshipLabel>
    <relationshipName>Resource_Job_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>