force-app/main/default/objects/sked__Resource_Job_Offer__c/fields/sked__Time_Notified__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Notified__c</fullName>
    <description>The time at which the offer was most recently dispatched to the resource</description>
    <label>Time Notified</label>
    <type>DateTime</type>
</CustomField>