force-app/main/default/objects/sked__Resource_Job_Offer__c/fields/sked__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked__UniqueKey__c</fullName>
    <description>Unique key comprised of the JobOfferId and the ResourceId. Will be populated by the trigger</description>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>