force-app/main/default/objects/sked__Resource_Job_Offer__c/fields/sked_API_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>sked_API_Error_Message__c</fullName>
    <label>API Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>