force-app/main/default/objects/sked__Resource_Job_Offer__c/fields/sked_Estimated_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>sked_Estimated_Travel_Distance__c</fullName>
    <label>Estimated Travel Distance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>