force-app/main/default/objects/sked__Resource_Job_Offer__c/fields/sked_Estimated_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Estimated_Travel_Time__c</fullName>
    <label>Estimated Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>